--- a/styles.css
+++ b/styles.css
@@ -435,6 +435,76 @@ footer {
     text-decoration: underline;
 }
 
+.more-work-header-div
+{
+    text-align: center;
+    padding: 20px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: auto;
+    max-width: 60%;
+}
+
+.more-work-div
+{
+
+    text-align: center;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: orange;
+    background-color: rgb(28, 28, 28);
+    padding: 20px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 60%;
+
+}
+.more-work-div a
+{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 599;
+}
+
+.more-work-div a:hover{
+    text-decoration: underline;
+}
+
+.more-work-div img
+{
+    width:200px;
+}
+
+table 
+{
+    width: 100%;
+    text-align: left;
+}
+
+#Reihe2
+{
+    width: 70%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+#Reihe1
+{
+    width: 10%;
+    padding-left: 0%;
+}
+
+#Reihe3
+{
+    width: 20%;
+    padding-left: 2%;
+    padding-right: 0%;
+}
+
 @media screen and (max-width: 1500px) {
     .introduction {
         margin-left: -30%;
